<resources>
    <string name="app_name">Sofit Task App</string>
    <string name="Navigation_drawer_close" />
    <string name="Navigation_drawer_open" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="posts">Posts</string>
    <string name="services">Services</string>
    <string name="id">ID:</string>
    <string name="user_id">User ID</string>
    <string name="title">Title :</string>
    <string name="body">Body :</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</string>
    <string name="payment_history">Payment History</string>
    <string name="news">News</string>
    <string name="payment">Payment</string>
    <string name="government_services">Government Services</string>
</resources>