<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".fragment.HomeFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/news"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_RV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/payment"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp">

                        <ImageView
                            android:id="@+id/payment_imageView"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="4dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_baseline_payment_24" />

                        <TextView
                            android:id="@+id/horizontal_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/payment_imageView"
                            android:text="@string/payment_history"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp">

                        <ImageView
                            android:id="@+id/payment_two_imageView"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="4dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_baseline_payment_green" />

                        <TextView
                            android:id="@+id/horizontal_two_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/payment_two_imageView"
                            android:text="@string/payment_history"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp">

                        <ImageView
                            android:id="@+id/payment_three_imageView"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="4dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_baseline_payment_24" />

                        <TextView
                            android:id="@+id/horizontal_three_TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/payment_three_imageView"
                            android:text="@string/payment_history"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/government_services"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:id="@+id/onClick"
            app:cardCornerRadius="10dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_one"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/one_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="@string/government_services"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_two"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/two_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="@string/government_services"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_three"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/three_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="@string/government_services"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_four"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/four_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="@string/government_services"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>